Responsive fixes, update on mobile nav and table fixes

--- a/SugeridorDePlanes/wwwroot/css/Home/HomeStyles.css
+++ b/SugeridorDePlanes/wwwroot/css/Home/HomeStyles.css
@@ -341,3 +341,27 @@ th {
 }
 
 
+
+
+/*** MEDIA QUERIES***/
+
+@media (max-width: 576px) {
+
+}
+
+@media (max-width: 768px) {
+    .factDiv {
+        margin-top:50px;
+    }
+    .generarDiv{
+        margin-bottom:30px;
+    }
+}
+
+@media (max-width: 992px) {
+
+}
+
+@media (max-width: 1200px) {
+
+}
